ws-slo/apps/forgejo/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
spec:
  sessionAffinity: ClientIP
  ports:
    - name: http
      appProtocol: http
      port: 80
      targetPort: http
    - name: ssh
      appProtocol: ssh
      port: 22
      targetPort: ssh
  selector:
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/name: forgejo
