ws-slo/apps/forgejo/base/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: forgejo
spec:
  rules:
    - backendRefs:
        - name: forgejo
          port: 22
